# lectusai

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup-dev.sh
.devcontainer/etc/devcontainer/functions/: aws.sh  docker.sh  github.sh  terraform.sh
.devcontainer/etc/devcontainer/shell/: .bashrc
.devcontainer/etc/devcontainer/shell/bash/: completions.sh
.github/workflows/: ci-cd.yml
.kiro/settings/: mcp.json
.kiro/specs/ai-news-aggregator/: design.md  requirements.md  tasks.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/utils/: config.py
frontend/: Dockerfile  next.config.ts  package.json
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf
terraform/modules/vpc/: main.tf
